...
      return;
    }
    if (!_isValidPassword(password)) {
      _showErrorDialog('Senha deve ter no mínimo 8 caracteres');
      return;
    }
    if (cnpj == '12.345.678/0001-90' && password == 'password123') {
      final existingUser = await UserStorageService.getUser();
      final user = User(
        cnpj: cnpj,
        senha: password,
        nomePreferido: existingUser?.nomePreferido,
        ultimoLogin: DateTime.now(),
      );
      if (_rememberMe) {
        await UserStorageService.saveUser(user, rememberMe: true);
      }
...
class _HeaderSection extends StatelessWidget {
  const _HeaderSection();
  @override
  Widget build(BuildContext context) {
    return Column(
      children: [
        const Text('SOPHOS KODIAK', style: AppTextStyles.logoTitle),
        Image.asset('assets/images/sophos_kodiak_logo.png', height: 250.0),
        const SizedBox(height: 20),
        const Text('Bem-vindo de volta!', style: AppTextStyles.title),
        const SizedBox(height: 10),
        const Text('Acesse sua conta', style: AppTextStyles.largeText),
      ],
    );
  }
}
...
  final ValueChanged<bool?> onRememberMeChanged;
  @override
  Widget build(BuildContext context) {
    return Column(
      children: [
        _CustomTextField(
          label: 'CNPJ',
          controller: cnpjController,
          hintText: 'Digite o seu CNPJ',
          keyboardType: TextInputType.number,
          onChanged: onCnpjChanged,
        ),
        const SizedBox(height: 30),
...
    return AlertDialog(
      backgroundColor: AppColors.background,
      shape: RoundedRectangleBorder(
        borderRadius: BorderRadius.circular(AppDimensions.loginBorderRadius),
      ),
      title: const Text(
        'Nome Preferido',
        style: TextStyle(color: AppColors.textPrimary),
      ),
      content: TextField(
        controller: nameController,
        style: const TextStyle(color: AppColors.textPrimary),
        decoration: const InputDecoration(
...
          ),
        ),
      ),
      actions: [
        TextButton(
          onPressed: onConfirm,
          child: const Text('OK', style: TextStyle(color: AppColors.primary)),
        ),
      ],
    );
  }
}

...
  Widget build(BuildContext context) {
    return AlertDialog(
      backgroundColor: AppColors.background,
      shape: RoundedRectangleBorder(
        borderRadius: BorderRadius.circular(AppDimensions.loginBorderRadius),
      ),
      title: const Text('Erro', style: TextStyle(color: AppColors.textPrimary)),
      content: Text(
        message,
        style: const TextStyle(color: AppColors.textPrimary),
      ),
      actions: [
        TextButton(
...
